--- a/templates/recommend.html
+++ b/templates/recommend.html
@@ -10,11 +10,6 @@
     .text-white {
         color: white;
     }
-    .book-card {
-        border: 2px solid #ff7f50;
-        padding: 10px;
-        margin: 10px 0;
-    }
 </style>
 <body style="background-color: black">
 
@@ -43,7 +38,7 @@
 
         {% if data %}
         {% for book in data %}
-        <div class="col-md-3 book-card" style="margin-top: 50px">
+        <div class="col-md-3" style="margin-top: 50px">
             <div class="card">
                 <div class="card-body">
                     <img class="card-img-top" src="{{ book[2] }}" alt="Book Image">
